--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DenoVote</title>
-    <script type="module" src="./app.js"></script>
-    <link rel="stylesheet" href="./main.css" />
+    <script type="module" src="/app.js"></script>
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <header>
